fix expand/collapse toggle, add basic styling

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+.cf:before,
+.cf:after {
+  content:"";
+  display:table;
+}
+.cf:after {
+  clear:both;
+}
+.cf {
+  zoom:1; /* For IE 6/7 (trigger hasLayout) */
+}
+
 .circle-explicit {
   height: 20px;
   width: 20px;
@@ -20,24 +32,46 @@
   float: left
 }
 
-.friend {
+.op-text {
   width: 200px;
-  display: inline-block;;
 }
 
 .path {
   width: 90px;
 }
 
-.opg-header {
-  clear: both;
+.opg-header, .op {
   line-height:28px;
+  padding: 4px 0px;
 }
 
-.opg-header > div {
+.opg-toggle {
+  height: 18px;
+  line-height: 18px;
+  margin: 4px;
+  font-size: 14px;
+  text-align: center;
+}
+
+.opg-header > div, .op > div {
   margin-right: 8px;
 }
 
 .opg {
-  margin-top: 16px;
+  margin-top: 8px;
+}
+
+.op {
+}
+
+.path-count {
+  background: #e6e6e6;
+  border-radius: 8px;
+  min-width: 16px;
+  text-align: center;
+  margin: 4px;
+  height: 18px;
+  line-height: 18px;
+  font-size: 12px;
+  color: #666;
 }
